--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    Hello vr
 </head>
+
 <body>
+    <nav>
+        <div style="display: flex; align-items: center; gap: 5px;">
+            <img src="https://cdn-icons-png.freepik.com/512/16939/16939922.png" alt="icon" width="30px" >
+            <h1>Library</h1>
+        </div>
+
+        <button class="addBookBtn">Add A Book</button>
+    </nav>
     
+    <dialog>
+        <form method="dialog">
+
+            <div class="inputField">
+                <label for="title">Title</label>
+                <input type="text" id="title">
+            </div>
+
+            <div class="inputField">
+                <label for="author">Author</label>
+                <input type="text" id="author">
+            </div>
+
+
+            <div>
+                <label for="read">Did you read?</label>
+                <input type="checkbox" id="read">
+            </div>
+
+            <button type="submit">Add Book</button>
+        </form>
+    </dialog>
+
+    <div class="container"></div>
 </body>
+<script src="index.js"></script>
+
 </html>
